update: link to single only on title and hover link color

--- a/src/css/_post.css
+++ b/src/css/_post.css
@@ -79,6 +79,10 @@ a.post-details-link {
   text-decoration: none;
 }
 
+a.post-details-link:hover {
+  color: rgb(47, 58, 178);
+}
+
 .author-avatar {
   vertical-align: middle;
   width: 2rem;
