--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -24,6 +24,16 @@
   background-color: rgb(84, 105, 212);
 }
 
+.btn-outline {
+  color: rgb(84, 105, 212);
+  font-weight: 600;
+  border: rgb(84, 105, 212);
+  background-color: rgb(255, 255, 255);
+  padding: 0.25rem 1rem;
+  margin-top: 1rem;
+  max-width: 6.25rem;
+}
+
 .btn-danger {
   box-shadow: unset;
   color: #fff;
