--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -39,3 +39,25 @@
   color: #fff;
   background-color: rgb(255, 47, 2);
 }
+
+.reply-submit-button {
+  align-self: flex-end;
+  padding: 5px 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.reply-submit-button:hover {
+  background-color: #0056b3;
+}
+
+.reply-btn,
+.delete-comment-btn {
+  flex-grow: 1; /* Make both buttons take equal space */
+  padding: 0.5rem;
+  width: fit-content;
+  max-width: 6rem;
+}
