--- a/src/css/_post.css
+++ b/src/css/_post.css
@@ -1,3 +1,8 @@
+/* main,
+.post-container {
+  background-color: rgba(8, 9, 10, 0.1);
+} */
+
 .post-grid {
   display: flex;
   flex-direction: column;
