update: working reply to main comment but still error with inner comment that reply to comment and the reply button keep adding the reply box

--- a/src/css/components/reply.css
+++ b/src/css/components/reply.css
@@ -21,3 +21,7 @@
   font-size: 14px;
   box-sizing: border-box; /* Ensures padding is included in width */
 }
+
+.reply-item {
+  margin-left: 2.75rem;
+}
