--- a/src/css/_profile.css
+++ b/src/css/_profile.css
@@ -72,10 +72,34 @@ span.avatar-3xl {
   position: relative;
   margin: 1rem;
   cursor: pointer;
-  width: 8rem;
+  width: 10rem;
+  max-height: 3rem;
   z-index: 100;
 }
 
 #updateProfileBtn:hover {
   background-color: rgb(48, 58, 178);
+}
+
+.post-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.post-list {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  width: 100%;
+  max-width: 43.75rem;
+}
+
+.update-profile-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
