--- a/src/css/_tag.css
+++ b/src/css/_tag.css
@@ -2,11 +2,22 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding: 1rem;
+  width: 100%;
 }
 
 .tags-container {
   display: flex;
   flex-wrap: wrap;
+}
+
+.tag-wrapper {
+  display: flex;
+  width: 100%;
+  padding: 1rem;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 43.75rem;
 }
 
 .tag {
