--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,6 +9,7 @@
 @import url(_auth.css);
 @import url(_home.css);
 @import url(_comment.css);
+@import url(_follow.css);
 @import url(_post.css);
 @import url(_profile.css);
 @import url(_search.css);
