--- a/src/css/components/nav.css
+++ b/src/css/components/nav.css
@@ -16,13 +16,14 @@ nav {
 }
 
 .r-nav {
+  gap: 1.25rem;
   flex-shrink: 0;
   white-space: nowrap;
 }
 
 .nav-menu {
   display: inline-block;
-  min-width: 6.25rem;
+  min-width: fit-content;
   text-align: center;
 }
 
